src/thirdparty/requirejs/tests/error/defineError.js
define(['a'], function (a) {
    return {
        name: 'hasDefineError',
        broken: a.doesNotExist.blowsUp
    };
});
